applications/cloudnative-pg/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/part-of: infrastructure
